--- a/tests/templates/index.html
+++ b/tests/templates/index.html
@@ -17,6 +17,12 @@ form2_ctx<br>
     {% csrf_token %}
     <input type="submit">
 </form>
+form3_ctx<br>
+<form method="post">
+    {{ form3_ctx }}
+    {% csrf_token %}
+    <input type="submit">
+</form>
 
 </body>
 </html>
